- Improve idle performance. The broker now calculates when the next event of
  interest is, and uses that as the timeout for e.g. epoll_wait(). This can
  reduce the number of process wakeups by 100x on an idle broker.
- Plugins no longer need to define mosquitto_plugin_cleanup() if they do not
  need to do any of their own cleanup. Callbacks will be unregistered
  automatically.

Client library:
- Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
  feature that allows the network thread to be woken from select() by another
  thread when e.g.  mosquitto_publish() is called. This reduces the number of
  sockets used by each client by two.
- Add `on_pre_connect()` callback to allow clients to update
  username/password/TLS parameters before an automatic reconnection.
- Callbacks no longer block other callbacks, and can be set from within a
  callback. Closes #2127.
- Add support for MQTT v5 broker to client topic aliases.
- Add `mosquitto_topic_matches_sub_with_pattern()`, which can match against
  subscriptions with `%c` and `%u` patterns for client id / username
  substitution.
- Add `mosquitto_sub_matches_acl()`, which can match one topic filter (a
  subscription) against another topic filter (an ACL).
- Add `mosquitto_sub_matches_acl_with_pattern()`, which can match one topic
  filter (a subscription) against another topic filter (an ACL), with `%c` and
  `%u` patterns for client id / username substitution.
- Performance: reduce memory allocations when sending packets.
- Reintroduce threading support for Windows.


2.0.12 - 2021-08-31
===================

Security:
- An MQTT v5 client connecting with a large number of user-property properties
  could cause excessive CPU usage, leading to a loss of performance and
  possible denial of service. This has been fixed.
- Fix `max_keepalive` not applying to MQTT v3.1.1 and v3.1 connections.
  These clients are now rejected if their keepalive value exceeds