@@ -124,6 +124,7 @@ enum mosq_err_t {
 	MOSQ_ERR_ADMINISTRATIVE_ACTION = 30,
 	MOSQ_ERR_ALREADY_EXISTS = 31,
 	MOSQ_ERR_RECEIVE_MAXIMUM_EXCEEDED = 32,
+	MOSQ_ERR_PLUGIN_IGNORE = 33,
 };
 
 /* Option values */
