@@ -70,6 +70,13 @@ Broker:
 - Plugins no longer need to define mosquitto_plugin_cleanup() if they do not
   need to do any of their own cleanup. Callbacks will be unregistered
   automatically.
+- Add MOSQ_ERR_PLUGIN_IGNORE to allow plugins to register basic auth or acl
+  check callbacks, but still act as though they are not registered. A plugin
+  that wanted to act as a blocklist for certain usernames, but wasn't carrying
+  out authentication could return MOSQ_ERR_PLUGIN_IGNORE for usernames not on
+  its blocklist. If no other plugins were configured, the client would be
+  authenticated. Using MOSQ_ERR_PLUGIN_DEFER instead would mean the clients
+  would be denied if no other plugins were configured.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
